// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`diff match patch does not use dmp for "privates" (underscore-prefixed keys) 1`] = `
Array [
  Object {
    "patch": Object {
      "id": "die-hard-ix",
      "set": Object {
        "reviews[_key==\\"abc123\\"]._type": "reviewFromUserRepresentingMovieOrNovelOrSomethingVeryLongThatCanBeShownAsStars",
      },
    },
  },
  Object {
    "patch": Object {
      "diffMatchPatch": Object {
        "useDmp": "@@ -7,8 +7,72 @@
 FromUser
+RepresentingMovieOrNovelOrSomethingVeryLongThatCanBeShownAsStars
",
      },
      "id": "die-hard-ix",
    },
  },
]
`;

exports[`diff match patch does not use dmp for "type changes" (number => string) 1`] = `
Array [
  Object {
    "patch": Object {
      "id": "die-hard-ix",
      "set": Object {
        "rating": "I would give it a solid 9 on a scale from 1 to 26",
      },
    },
  },
]
`;

exports[`diff match patch handles patching with unicode surrogate pairs 1`] = `
Array [
  Object {
    "patch": Object {
      "diffMatchPatch": Object {
        "ascii": "@@ -30,10 +30,10 @@
 tal 
-xx
+%3C3
 , re
",
        "reviews[_key==\\"abc123\\"].text": "@@ -30,10 +30,10 @@
 tal 
-%F0%9F%98%89
+%F0%9F%98%80
 , re
",
      },
      "id": "die-hard-ix",
    },
  },
]
`;

exports[`diff match patch respects absolute length threshold 1`] = `
Array [
  Object {
    "patch": Object {
      "id": "die-hard-ix",
      "set": Object {
        "its": "also short",
      },
    },
  },
]
`;

exports[`diff match patch respects relative length threshold (allowed) 1`] = `
Array [
  Object {
    "patch": Object {
      "diffMatchPatch": Object {
        "reviews[_key==\\"abc123\\"].text": "@@ -27,13 +27,12 @@
 an #
-7 - i
+8! I
 t wa
",
      },
      "id": "die-hard-ix",
    },
  },
]
`;

exports[`diff match patch respects relative length threshold 1`] = `
Array [
  Object {
    "patch": Object {
      "id": "die-hard-ix",
      "set": Object {
        "synopsis": "When a sack of coffee explodes at the Ultra Gnoch asteroid, a man calling himself \\"Ziltoid\\" phones Major Case Unit Inspector Mark Cimino at the Tellus police station and claims responsibility for the sack. He orders suspended police officer Lt. John McClane to travel to the asteroid, in his underwear. McClane is flown there by Cimino and three other officers. Ultra Gnoch miner Dave Young spots McClane and tries to get him off the asteroid before the coffee bugs infiltrate the asteroid, but a gang of underpant gnomes attacks McClane and Young, who barely escape.",
      },
    },
  },
]
`;
